Conversation viewing almost done